--- a/pages/content-api/query-methods/get.mdx
+++ b/pages/content-api/query-methods/get.mdx
@@ -70,7 +70,7 @@ You can also deep dive and fetch properties that are cross-referenced to other c
       summary
       blocks {
         ... on ImageBlock {
-          URL
+          url
         }
       }
     }
