--- a/pages/image-api/api-reference.mdx
+++ b/pages/image-api/api-reference.mdx
@@ -37,7 +37,7 @@ query {
 </Tabs.Tab>
 <Tabs.Tab>
 ```tsx
-// TypeScript code is coming soon...
+await unbody.get.imageBlock.where({ path: '/your/image/path'},  ).select('url', 'alt', 'width', 'height').exec()
 ```
 </Tabs.Tab>
 </Tabs>
