--- a/pages/content-api/search/record-similarity.mdx
+++ b/pages/content-api/search/record-similarity.mdx
@@ -1,6 +1,6 @@
 import {Tab, Tabs} from "@nextui-org/react";
 
-Similarity Record is a way to see how alike objects are. You can use this to find objects that look like a specific one. For instance, if you have many Google Docs, you can use this to find docs that are like Doc A. In the past, you had to look at things like keywords or topics to find similar items. But with similarity search in Unbxd, this isn't necessary. You can compare the whole document.
+Record Similarity is a way to see how alike objects are. You can use this to find objects that look like a specific one. For instance, if you have many Google Docs, you can use this to find docs that are like Doc A. In the past, you had to look at things like keywords or topics to find similar items. But with similarity search in Unbody, this isn't necessary. You can compare the whole document.
 
 ## Syntax
 
@@ -10,17 +10,17 @@ Similarity search can be performed on any object. Here's how:
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
     <Tab title={"Unbody SDK"}>
         ```javascript copy
-        unbody.get.<object_name>.search.similar.record(objectId, {...options})
+        await unbody.get.<object_name>.similar.record(objectId, {...options}).exec();
         ```
     </Tab>
     <Tab title={"GraphQL"}>
 
         ```graphql
-        query{
-            Get{
+        query {
+            Get {
                 <ObjectName>(
                     nearObject: {
-                    objectId: "objectId",
+                    id: "objectId",
                         ...options
                     }
                 ){
@@ -42,21 +42,17 @@ Find Google Docs that are similar to a specific Google Doc.
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
     <Tab title={"Unbody SDK"}>
         ```javascript copy
-        unbody.get
-            .googleDoc
-            .search
-            .similar
-            .record("specificDocId");
+        await unbody.get.googleDoc.similar.record('specificDocId').exec()
         ```
     </Tab>
     <Tab title={"GraphQL"}>
 
         ```graphql
-        query{
-            Get{
+        query {
+            Get {
                 GoogleDoc(
                     nearObject: {
-                    objectId: "specificDocId"
+                        id: "specificDocId"
                     }
                 ){
                     ...fields
@@ -72,22 +68,18 @@ Find Google Docs that are similar to a specific Google Doc.
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
     <Tab title={"Unbody SDK"}>
         ```javascript copy
-        unbody.get
-            .discordMessage
-            .search
-            .similar
-            .record("specificMessageId");
+        await unbody.get.discordMessage.similar.record("specificMessageId").exec()
 
         // payload is an array of DiscordMessages that are similar to the specific message with id "specificMessageId"
         ```
     </Tab>
     <Tab title={"GraphQL"}>
         ```graphql
-        query{
-            Get{
+        query {
+            Get {
                 DiscordMessage(
                     nearObject: {
-                    objectId: "specificMessageId"
+                        id: "specificMessageId"
                     }
                 ){
                     ...fields
@@ -102,11 +94,7 @@ Find Google Docs that are similar to a specific Google Doc.
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
     <Tab title={"Unbody SDK"}>
         ```javascript copy
-        unbody.get
-            .textBlock
-            .search
-            .similar
-            .record("specificTextBlockId");
+        await unbody.get.textBlock.similar.record("specificTextBlockId").exec();
 
         // payload is an array of textBlocks that are similar to the specific text block with id "specificTextBlockId"
         // this search includes all types of objects available in the sources of your project
@@ -115,11 +103,11 @@ Find Google Docs that are similar to a specific Google Doc.
     </Tab>
     <Tab title={"GraphQL"}>
         ```graphql
-        query{
-            Get{
+        query {
+            Get {
                 TextBlock(
                     nearObject: {
-                    objectId: "specificTextBlockId"
+                        id: "specificTextBlockId"
                     }
                 ){
                     ...fields
