fix: change rag menus names

--- a/pages/generative-and-rag/multimodal-rag-using-generative-api.mdx
+++ b/pages/generative-and-rag/multimodal-rag-using-generative-api.mdx
@@ -1,6 +1,6 @@
 import { Tabs } from "nextra/components"
 
-# Multimodal using generative API
+# Multimodal Rag Using Generative API
 
 Use multiple types of inputs including text and images to generate comprehensive analysis and insights.
 
