--- a/pages/generative-and-rag/multimodal-rag-using-generative-search.mdx
+++ b/pages/generative-and-rag/multimodal-rag-using-generative-search.mdx
@@ -1,6 +1,6 @@
 import { Tabs } from "nextra/components"
 
-# Multimodal using generative search
+# Multimodal Rag Using Generative Search
 
 Use generative search capabilities to analyze multiple images and their associated metadata comprehensively.
 
