--- a/pages/generative-and-rag/simple-rag-with-generative-search.mdx
+++ b/pages/generative-and-rag/simple-rag-with-generative-search.mdx
@@ -1,6 +1,6 @@
 import { Tabs } from "nextra/components"
 
-# Basic using generative search
+# Simple Rag With Generative Search
 
 Use AI to generate meaningful insights and summaries from your documents by applying natural language prompts to individual documents or across multiple documents.
 
